--- a/wp-content/themes/demoframe/assets/css/custom-style.css
+++ b/wp-content/themes/demoframe/assets/css/custom-style.css
@@ -39,7 +39,7 @@ Author URI: chamsocweb.com
     margin-left: auto;
 }
 body {
-    font-family: 'Mulish', sans-serif;
+    font-family: 'Montserrat';
 }
 pre{
     white-space: pre-wrap;
@@ -3732,7 +3732,7 @@ body.page-content-box [data-vc-full-width] [data-vc-full-width]{
 .tabs-block.block-element > h3 {
     text-align: center;
     font-size: 18px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 3px;
     margin-bottom: 30px;
 }
@@ -3871,7 +3871,7 @@ a.navi {
     padding-top: 19px;
     margin-top: 17px;
     font-size: 30px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 6px;
     font-weight: 700;
     text-transform: uppercase;
@@ -3899,7 +3899,7 @@ a.navi {
     padding-top: 19px;
     margin-top: 17px;
     font-size: 30px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 6px;
     font-weight: 700;
     text-transform: uppercase;
@@ -4344,7 +4344,7 @@ a.navi {
 .banner-slider .banner-info h2 {
     color: #fff;
     text-transform: uppercase;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 7px;
 }
 .banner-slider .banner-info h4 {
@@ -4357,7 +4357,7 @@ a.navi {
 }
 .banner-info a {
     font-size: 16px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     color: #fff;
     letter-spacing: 4px;
     text-transform: uppercase;
@@ -4365,7 +4365,7 @@ a.navi {
 }
 .banner-info h3 {
     font-size: 17px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     color: #fff;
     letter-spacing: 4px;
     text-transform: uppercase;
@@ -4384,7 +4384,7 @@ a.navi {
 }
 .banner-advs .banner-info h4 {
     font-size: 14px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     color: #fff;
     letter-spacing: 3px;
     text-transform: uppercase;
@@ -4403,7 +4403,7 @@ a.navi {
     margin-bottom: 28px;
 }
 .center_banner .banner-info h2 {
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 3px;
     font-size: 16px;
     color: #fff;
@@ -4448,13 +4448,13 @@ a.navi {
 .block-element>h3.title18 {
     text-align: center;
     font-size: 18px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 3px;
     margin-bottom: 30px;
 }
 .text-number h3 {
     font-size: 18px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     color: #fff;
     letter-spacing: 4px;
     text-transform: uppercase;
@@ -4463,7 +4463,7 @@ a.navi {
     margin-top: 39px;
 }
 .text-number h2 {
-    font-family: "Oswald";
+    font-family: "Montserrat";
     color: #fff;
     letter-spacing: 7px;
     text-transform: uppercase;
@@ -4974,7 +4974,7 @@ a.navi {
     margin-top: 0;
     position: relative;
     font-size: 30px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 6px;
     font-weight: 700;
     text-transform: uppercase;
@@ -5093,7 +5093,7 @@ a.navi {
     margin-top: 0;
     position: relative;
     font-size: 30px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 6px;
     font-weight: 700;
     text-transform: uppercase;
@@ -5153,7 +5153,7 @@ a.navi {
     margin-top: 0;
     position: relative;
     font-size: 30px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 6px;
     font-weight: 700;
     text-transform: uppercase;
@@ -5275,7 +5275,7 @@ a.navi {
 .posts-home2 > h3.title18 {
     position: relative;
     font-size: 30px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 6px;
     font-weight: 700;
     text-transform: uppercase;
@@ -6241,7 +6241,7 @@ a.navi {
     background-color: #f96868;
     padding-left: 24px;
     color: #fff;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     font-size: 18px;
     letter-spacing: 1px;
     font-weight: 500;
@@ -6274,7 +6274,7 @@ a.navi {
     margin-top: 0px;
 }
 .banner-style3 .banner-info h2 {
-    font-family: "Oswald";
+    font-family: "Montserrat";
     font-size: 24px;
     text-transform: uppercase;
     font-weight: 500;
@@ -6332,7 +6332,7 @@ a.navi {
     top: 16px;
     left: 35px;
     margin: 0;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     font-size: 18px;
     letter-spacing: 1px;
     font-weight: 500;
@@ -6415,7 +6415,7 @@ a.navi {
     padding: 0 7px;
 }
 .testimo-style2 .title14 a {
-    font-family: "Oswald";
+    font-family: "Montserrat";
     font-size: 18px;
     letter-spacing: 1px;
     font-weight: 500;
@@ -6610,7 +6610,7 @@ a.navi {
     text-transform: uppercase;
     text-align: center;
     font-size: 18px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 1px;
     font-weight: 400;
     margin-bottom: 20px;
@@ -6657,7 +6657,7 @@ a.navi {
 .brand-sale h2 {
     font-size: 30px;
     color: #fff;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     font-weight: 400;
     text-transform: uppercase;
     margin: 0;
@@ -8062,7 +8062,7 @@ a.navi {
 }
 .main-nav li.has-mega-menu>.mega-menu .mega-list-cat h2 {
     font-size: 14px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 1px;
 }
 .mega-list-cat ul {
@@ -8147,7 +8147,7 @@ a.navi {
 }
 .header-page .mega-menu .banner-info h3 {
     font-size: 14px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     color: #333;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -8844,7 +8844,7 @@ a.navi {
 }
 .banner-style4 .banner-info h3 {
     font-size: 18px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     color: #333;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -8855,7 +8855,7 @@ a.navi {
 }
 .banner-style4 .banner-info h2 {
     font-size: 30px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     color: #333;
     font-weight: 700;
     text-transform: uppercase;
@@ -8900,7 +8900,7 @@ a.navi {
 }
 .banner-style5 .banner-info h3 {
     font-size: 18px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     color: #fff;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -8911,7 +8911,7 @@ a.navi {
 }
 .banner-style5 .banner-info h2 {
     font-size: 30px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     color: #fff;
     font-weight: 700;
     text-transform: uppercase;
@@ -8991,7 +8991,7 @@ a.navi {
     font-size: 60px;
     text-transform: uppercase;
     font-weight: 700;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     color: #3333330a;
     letter-spacing: 3px;
 }
@@ -9006,10 +9006,10 @@ a.navi {
     padding-right: 12px;
     z-index: 9;
     letter-spacing: 1px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
 }
 .description_dim>h3.block-title {
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 3px;
     margin-top: 0;
     text-transform: uppercase;
@@ -9192,7 +9192,7 @@ a.navi {
     font-weight: 700;
     height: 100%;
     line-height: 45px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 0px;
     position: relative;
 }
@@ -9285,7 +9285,7 @@ a.navi {
 .item-post.post-style5 .post-info .post-title {
     text-align: left;
     font-size: 30px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     font-weight: 400;
     text-transform: uppercase;
     margin-bottom: 30px;
@@ -9441,7 +9441,7 @@ a.navi {
     color: #333;
     margin-top: 0;
     position: relative;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     text-transform: uppercase;
     margin-bottom: 30px;
     text-align: center;
@@ -9833,7 +9833,7 @@ a.navi {
 }
 .style2 .service-text .title {
     font-size: 14px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 1px;
     margin-bottom: 0px;
 }
@@ -10011,7 +10011,7 @@ a.navi {
     color: #333;
     font-weight: 700;
     font-size: 14px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 1px;
     text-transform: uppercase;
 }
@@ -10224,7 +10224,7 @@ a.navi {
 .border1.block-element>h3.title18 {
     text-align: left;
     font-size: 14px;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 1px;
     margin-bottom: 0;
     line-height: 47px;
@@ -10250,7 +10250,7 @@ a.navi {
 .banner-style7 .banner-info h2 {
     font-size: 30px;
     color: #f96868;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     letter-spacing: 1px;
     margin-bottom: 9px;
 }
@@ -10477,7 +10477,7 @@ a.navi {
     padding-top: 17px;
     padding-left: 20px;
     color: #333;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     font-size: 14px;
     letter-spacing: 1px;
     font-weight: 700;
@@ -10507,7 +10507,7 @@ a.navi {
     margin: 0;
     border-bottom: 1px solid #e8e8e8;
     color: #333;
-    font-family: "Oswald";
+    font-family: "Montserrat";
     font-size: 14px;
     letter-spacing: 1px;
     font-weight: 700;
@@ -16598,7 +16598,6 @@ body.home {
 #vc_header_common_menu .main-nav ul li a {
     padding: 0px 10px !important;
     color: #303188;
-    text-transform: none;
     font-weight: 700;
     size: 14px;
     line-height: 18px;
