--- a/wp-content/themes/demoframe/assets/css/custom-style.css
+++ b/wp-content/themes/demoframe/assets/css/custom-style.css
@@ -17677,3 +17677,65 @@ a.vc_lienhe_a::after {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+.vc_page_products.black .item-product .product-info .product-title {
+    color: #1B1B1B;
+    font-weight: bold;
+    font-size: 16px;
+}
+.item-product:hover {
+    box-shadow: none;
+}
+.vc_dropdown {
+    text-align: right;
+    position: absolute;
+    top: -40px;
+    right: 11px;
+}
+.dropbtn123 {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 24px;
+    color: #1B1B1B;
+    margin-bottom: 25px;
+    position: relative;
+    padding-right: 20px;
+}
+#myDropdown123 {
+    width: 360px;
+    float: right;
+    text-align: left;
+    background: #F9F9F9;
+    box-shadow: inset 0 -3em 0em rgb(0 0 0 / 10%), 0 0 0 1px #e0e0e0, 0.3em 0.3em 1em rgb(0 0 0 / 30%);
+    display: none;
+    position: absolute;
+    right: 0;
+    z-index: 9;
+
+}
+#myDropdown123 a {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 24px;
+    color: #1B1B1B;
+    width: 100%;
+    display: block;
+    background: #F9F9F9;
+    padding: 8px 8px;
+
+}
+#myDropdown123 a.active {
+    background: #F47321;
+}
+#myDropdown123.active {
+    display: block;
+}
+.dropbtn123:after {
+    position: absolute;
+    display: block;
+    font-family: "FontAwesome";
+    content: "\f0dd";
+    top: -2px;
+    font-size: 14px;
+    color: #000;
+    right: 4px;
+}
