--- a/wp-content/themes/demoframe/assets/css/custom-style.css
+++ b/wp-content/themes/demoframe/assets/css/custom-style.css
@@ -17739,3 +17739,75 @@ a.vc_lienhe_a::after {
     color: #000;
     right: 4px;
 }
+.vc_page_dich_vu .tab-content-product {
+    height: 670px;
+}
+.vc_page_dich_vu .tab-content-product div ,
+.vc_page_dich_vu .tab-content-product a,
+.vc_page_dich_vu .tab-content-product img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+.list-tang .tab-header {
+    width: 30%;
+    height: 670px;
+}
+.vc_page_dich_vu .tab-content-product {
+    width: 70%;
+}
+
+.vc_page_dich_vu .noidunganh .text1 {
+    height: 171px;
+    overflow: hidden;
+}
+.vc_page_dich_vu .noidunganh .text1, .vc_page_dich_vu .noidunganh .text2 {
+    width: 79%;
+    padding-left: 0;
+    margin-right: 0;
+    margin-left: auto;
+}
+.list-tang.vc_page_dich_vu .btn-scien {
+    text-align: left;
+    width: 79%;
+    padding-left: 0;
+    margin-right: 0;
+    margin-left: auto;
+}
+.vc_page_dich_vu .btn-scien a {
+    margin: 0;
+}
+.vc_page_dich_vu .tab-header li.active:first-child > a::before,
+.vc_page_dich_vu .tab-header li.active:nth-child(2) > a::before,
+.vc_page_dich_vu .tab-header li.active:nth-child(3) > a::before{
+    left: -80px;
+}
+.vc_page_dich_vu .tab-header li.active > a {
+    padding-left: 0;
+    margin-right: 0;
+    margin-left: auto;
+    width: calc(79% - 80px);
+}
+.vc_page_dich_vu .tab-header li > a {
+    height: 120px;
+    transition: initial;
+}
+
+.vc_page_dich_vu .noidunganh .text2 {
+    height: 67px;
+    overflow: hidden;
+}
+
+@media (max-width: 1370px){
+    .vc_page_dich_vu .tab-header li > a {
+        padding: 31px 0 31px 166px;
+    }
+    .vc_page_dich_vu .tab-header li:first-child > a::before,
+    .vc_page_dich_vu .tab-header li:nth-child(2) > a::before,
+    .vc_page_dich_vu .tab-header li:nth-child(3) > a::before{
+        left: 88px;
+    }
+    .vc_page_dich_vu .tab-header li.active > a {
+        padding-right: 0;
+    }
+}
