bla blo baolo css mbile

--- a/wp-content/themes/demoframe/assets/css/custom-style.css
+++ b/wp-content/themes/demoframe/assets/css/custom-style.css
@@ -17811,3 +17811,8 @@ a.vc_lienhe_a::after {
         padding-right: 0;
     }
 }
+@media (max-width: 1200px){
+    .main-nav .toggle-mobile-menu span, .main-nav .toggle-mobile-menu::after, .main-nav .toggle-mobile-menu::before {
+        background: #303188;
+    }
+}
